--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div id="console-output"></div>
 
-    <script>
+    <!-- <script>
         // Функція для перехоплення виводу з консолі розробника та відображення його на сторінці HTML
         (function () {
             var consoleOutput = document.getElementById("console-output");
@@ -36,13 +36,13 @@
 
             interceptConsoleLog(); // Запускає перехоплення виводу з консолі
         })();
-    </script>
+    </script> -->
 
 
     <script src="./js/task-1.js" defer></script>
     <script src="./js/task-2.js" defer></script>
     <script src="./js/task-3.js" defer></script>
-    <script src="./js/task-4.js" defer></script>
+    <!-- <script src="./js/task-4.js" defer></script> -->
 
 </body>
 
